fix: volume slider style on firefox

--- a/web/style.css
+++ b/web/style.css
@@ -139,6 +139,7 @@ main {
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
   input[type="range"] {
     overflow: hidden;
+    height: var(--range-height);
     -webkit-appearance: none;
     border: 2px solid var(--text);
     background-color: var(--base);
@@ -158,6 +159,34 @@ main {
     background: var(--text);
     box-shadow: -80px 0 0 80px var(--range-accent);
   }
+}
+
+input[type="range"]::-moz-range-progress {
+  border: none;
+  height: var(--range-height);
+  background-color: var(--range-accent);
+}
+
+input[type="range"]::-moz-range-track {
+  border: none;
+  background-color: var(--base);
+}
+
+input[type="range"]::-moz-range-thumb {
+  appearance: none;
+  border: none;
+  border-radius: 0;
+  width: var(--range-height);
+  height: var(--range-height);
+  background-color: var(--text);
+}
+
+/* IE*/
+input[type="range"]::-ms-fill-lower {
+  background-color: var(--range-accent);
+}
+input[type="range"]::-ms-fill-upper {
+  background-color: var(--base);
 }
 
 .button {
